# sdl-game

./: .gitignore  Doxyfile  Windows Setup Notes.txt  readme.md
Docs/html/: _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _game_one_8cpp.html  _game_one_8cpp_source.html  _game_one_8h.html  _game_one_8h_source.html  _l_engine_8cpp.html  _l_engine_8cpp.js  _l_engine_8cpp_source.html  _l_engine_8h.html  _l_engine_8h.js  _l_engine_8h_source.html  _l_game_base_8cpp.html  _l_game_base_8cpp_source.html  _l_game_base_8h.html  _l_game_base_8h_source.html  _l_object_8h.html  _l_object_8h_source.html  _l_object_manager_8cpp.html  _l_object_manager_8cpp_source.html  _l_object_manager_8h.html  _l_object_manager_8h_source.html  _l_renderer_8cpp.html  _l_renderer_8cpp.js  _l_renderer_8cpp_source.html  _l_renderer_8h.html  _l_renderer_8h_source.html  _l_sprite_8cpp.html  _l_sprite_8cpp_source.html  _l_sprite_8h.html  _l_sprite_8h_source.html  _my_first_game_object_8cpp.html  _my_first_game_object_8cpp_source.html  _my_first_game_object_8h.html  _my_first_game_object_8h_source.html  _s_d_l_event_handling_8cpp.html  _s_d_l_event_handling_8cpp_source.html  _s_d_l_event_handling_8h.html  (+260 more)
Docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_64.js  all_67.js  all_6c.js  all_7.js  all_73.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_73.js  classes_8.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  (+44 more)
Docs/latex/: _game_one_8cpp.tex  _game_one_8h.tex  _l_game_base_8cpp.tex  _l_game_base_8h.tex  _l_object_8h.tex  _s_d_l_event_loop_8cpp.tex  _s_d_l_event_loop_8h.tex  _s_d_l_main_8h.tex  _s_d_l_renderer_8cpp.tex  _s_d_l_window_8cpp.tex  _s_d_l_window_8h.tex  _test_doxy_8h.tex  annotated.tex  class_doxy_class.tex  class_game_one.eps  class_game_one.tex  class_l_engine.tex  class_l_game_base.eps  class_l_game_base.tex  class_l_object.eps  class_l_object.tex  class_s_d_l_renderer.tex  class_s_d_l_window.tex  classclass.tex  dir_04976cd617afb720a3691d5360f44dcb.tex  dir_09e3f5b18c928479ddc3371c64eafca6.tex  dir_0c3dc0d7e1d4c42a69a7449266e80bdf.tex  dir_103b4e930afba385b387bb1ffc8df4c7.tex  dir_16fd271302a16f76ffca3871d6d38e0c.tex  dir_2458d32ab4df0bfaa00c4d58b1753c75.tex  dir_40eb2f062aaa856a14eeb67e1d96c6bc.tex  dir_40fd82a4f80098666dd63eb23ca36ab5.tex  dir_4987cb35ece19ffdf9ba2abbf8f61620.tex  dir_6320743ee595f7bd601dd2e6de9998ef.tex  dir_69e5c47b13ea0e9a19536aa8189b4663.tex  dir_89b846d8e6d67dcbc3012629cb654368.tex  dir_b52f80e8baeb9e9f45838d9f9385d313.tex  dir_bfde88a9bec73e602ff6e74823258fd8.tex  dir_d6516b238edcc4d73f7c91959ac3ee4f.tex  dir_d8f17335b403eb6145dc3a7261df96ab.tex  (+5 more)
Source/: CMakeLists.txt
Source/Game/: CMakeLists.txt
Source/GameOne/: CMakeLists.txt
Source/GameOne/include/: Banana.h  GameOne.h  GameSprite.h  Paddle.h  Pong.h  ScoreGUI.h
Source/GameOne/src/: Banana.cpp  GameOne.cpp  GameSprite.cpp  Paddle.cpp  Pong.cpp  ScoreGUI.cpp  main.cpp
Source/Libraries/Engine/: CMakeLists.txt
Source/Libraries/Engine/include/: Engine.h  GameBase.h  Object.h
Source/Libraries/Engine/src/: Engine.cpp  GameBase.cpp
Source/Libraries/Ffiseg/: CMakeLists.txt
Source/Libraries/Ffiseg/include/: FCommon.h  FContacts.h  FDebugDraw.h  FInternal.h  FRigidBody.h  FShape.h  FWorld.h  Ffiseg.h
Source/Libraries/Ffiseg/src/: FContacts.cpp  FDebugDraw.cpp  FInternal.cpp  FRigidBody.cpp  FWorld.cpp
Source/Libraries/LEngine/: CMakeLists.txt
Source/Libraries/LEngine/include/: LAudio.h  LEngine.h  LError.h  LEvents.h  LGameBase.h  LInput.h  LObject.h  LObjectManager.h  LPauseSystem.h  LRenderer.h  LSprite.h  LText.h  LTextSprite.h  LUpdatable.h  LUpdateLoop.h  LUpdatingList.h
Source/Libraries/LEngine/src/: LAudio.cpp  LEngine.cpp  LEvents.cpp  LGameBase.cpp  LInput.cpp  LObject.cpp  LObjectManager.cpp  LPauseSystem.cpp  LRenderer.cpp  LSprite.cpp  LText.cpp  LTextSprite.cpp  LUpdatable.cpp  LUpdateLoop.cpp  LUpdatingList.cpp
Source/Libraries/SDLInterface/: CMakeLists.txt
Source/Libraries/SDLInterface/include/: SDLAudio.h  SDLCommon.h  SDLError.h  SDLEventHandling.h  SDLEventLoop.h  SDLFunctionQueue.h  SDLHelper.h  SDLMain.h  SDLMutex.h  SDLRect.h  SDLRenderer.h  SDLSurface.h  SDLText.h  SDLTexture.h  SDLThread.h  SDLTimer.h  SDLWindow.h
Source/Libraries/SDLInterface/src/: SDLAudio.cpp  SDLEventHandling.cpp  SDLEventLoop.cpp  SDLHelper.cpp  SDLMain.cpp  SDLMutex.cpp  SDLRenderer.cpp  SDLSurface.cpp  SDLText.cpp  SDLTexture.cpp  SDLThread.cpp  SDLTimer.cpp  SDLWindow.cpp
Source/Libraries/Util/: CMakeLists.txt
Source/Libraries/Util/include/: debug.h  eError.h  error.h  fnQueue.h  map_helpers.h  math_types.h  types.h
Source/Libraries/Util/src/: debug.cpp  fnQueue.cpp
Source/Platformer/: CMakeLists.txt
Source/Platformer/include/: PlatformGame.h
Source/Platformer/src/: PlatformGame.cpp
Source/cmake/: config.cmake  game.cmake
Source/include/: Banana.h  GameOne.h  GameSprite.h  MyFirstGameObject.h  Paddle.h  TestDoxy.h
Source/src/: Banana.cpp  GameOne.cpp  GameSprite.cpp  MyFirstGameObject.cpp  Paddle.cpp  main.cpp
cmake/: library.cmake
